# cmake-tutorial

./: CMakeLists.txt  COPYRIGHT  hello.c  say.c
lib-say/: CmakeLists.txt  say.h
src/: CMakeLists.txt  CmakeLists.txt  hello.c
