cmake_minimum_required(VERSION 2.8)
project(hello C)

set(CMAKE_C_STANDARD 11)

ADD_SUBDIRECTORY(src bin)

INSTALL(TARGETS hello 
    RUNTIME DESTINATION bin
    )
INSTALL(FILES COPYRIGHT README DESTINATION share/doc)
INSTALL(PROGRAMS run-hello.sh DESTINATION bin)
INSTALL(PROGRAMS run-hello.bat DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc)
